Fix broken svg path

--- a/docs/mapbox-gl-download.css
+++ b/docs/mapbox-gl-download.css
@@ -11,5 +11,5 @@ button.mapbox-ctrl-download {
 }
 
 button.mapbox-ctrl-download .mapboxgl-ctrl-icon {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='29' height='29' viewBox='0 0 29 29' xmlns='http://www.w3.org/2000/svg' fill='%23333'%3E %3Cpath d='M5,23v-7.5h2.5v5h14,v-5h2.5v7.5zM14.5,18.5l-5,-5h3v-7.5h4v7.5h3z'/%3E %3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='29' height='29' viewBox='0 0 29 29' xmlns='http://www.w3.org/2000/svg' fill='%23333'%3E %3Cpath d='M5,23v-7.5h2.5v5h14v-5h2.5v7.5zM14.5,18.5l-5,-5h3v-7.5h4v7.5h3z'/%3E %3C/svg%3E");
 }
